--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"helmet": "^6.0.0",
 		"lodash": "^4.17.21",
 		"path": "^0.12.7",
-		"sharp": "^0.31.1"
+		"sharp": "^0.31.1",
+		"xmlbuilder": "^15.1.1"
 	},
 	"devDependencies": {
 		"mocha": "^10.0.0",
