--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
 	"description": "Mason Kolehmainen's express app to host his photography website.",
 	"main": "app.js",
 	"scripts": {
-		"start": "node app.js",
-		"test": "mocha --reporter spec"
+		"build": "npx babel src -o assets/public/babel.js",
+		"start": "npm run build && node app.js",
+		"test": "npm run build && mocha --reporter spec"
 	},
 	"keywords": [
 		"photography",
@@ -17,17 +18,27 @@
 	"author": "Mason Kolehmainen",
 	"license": "ISC",
 	"dependencies": {
+		"babel-cli": "^6.26.0",
 		"cheerio": "^1.0.0-rc.12",
 		"compression": "^1.7.4",
 		"exif-reader": "^1.0.3",
 		"express": "^4.18.1",
 		"helmet": "^6.0.0",
 		"lodash": "^4.17.21",
+		"next": "^12.3.1",
 		"path": "^0.12.7",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"sharp": "^0.31.1",
 		"xmlbuilder": "^15.1.1"
 	},
 	"devDependencies": {
+		"@babel/cli": "^7.19.3",
+		"@babel/core": "^7.19.6",
+		"@babel/preset-env": "^7.19.4",
+		"@babel/preset-react": "^7.18.6",
+		"babel-preset-react-app": "^10.0.1",
+		"eslint": "^8.29.0",
 		"mocha": "^10.0.0",
 		"supertest": "^6.3.0"
 	}
