--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"helmet": "^6.0.0",
 		"lodash": "^4.17.21",
 		"path": "^0.12.7",
+		"prom-client": "^14.1.1",
 		"sharp": "^0.31.1",
 		"xmlbuilder": "^15.1.1"
 	},
