--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"compression": "^1.7.4",
 		"exif-reader": "^1.0.3",
 		"express": "^4.18.1",
+		"express-prom-bundle": "^6.6.0",
 		"helmet": "^6.0.0",
 		"lodash": "^4.17.21",
 		"path": "^0.12.7",
